Small html change

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class = "text-2xl" > Tailwind Tests </h1>
+    <h1> Tailwind Tests </h1>
     <button>button</button>
 </body>
 </html>
